# IK_Solver_Robot_Arm

./: .gitignore  CMakeLists.txt  LICENSE.md  README.md
.github/workflows/: cmake.yml
app/: CMakeLists.txt  forward_kinematics.cpp  inverse_kinematics.cpp  main.cpp  robot_parameters.cpp  simulation.py
cmake/: CodeCoverage.cmake
docs/: Doxyfile  introduction.txt
docs/html/: annotated.html  app_2CMakeLists_8txt.html  app_2main_8cpp.html  app_2main_8cpp__incl.map  app_2main_8cpp__incl.md5  classForwardKinematics-members.html  classForwardKinematics.html  classForwardKinematics__coll__graph.map  classForwardKinematics__inherit__graph.md5  classInverseKinematics-members.html  classInverseKinematics.html  classInverseKinematics__coll__graph.map  classInverseKinematics__inherit__graph.md5  classRobotParameters-members.html  classRobotParameters.html  classRobotParameters__inherit__graph.map  classRobotParameters__inherit__graph.md5  classes.html  code__test_8cpp.html  code__test_8cpp__incl.map  code__test_8cpp__incl.md5  dir_000000_000002.html  dir_000000_000003.html  dir_000001_000002.html  dir_000001_000003.html  dir_13e138d54eb8818da29c3992edef070a.html  dir_13e138d54eb8818da29c3992edef070a_dep.map  dir_13e138d54eb8818da29c3992edef070a_dep.md5  dir_49e56c817e5e54854c35e136979f97ca.html  dir_d422163b96683743ed3963d4aac17747.html  dir_d422163b96683743ed3963d4aac17747_dep.map  dir_d44c64559bbebec7f509842c48db8b23.html  files.html  forward__kinematics_8cpp.html  forward__kinematics_8cpp__incl.map  forward__kinematics_8cpp__incl.md5  forward__kinematics_8hpp.html  forward__kinematics_8hpp__dep__incl.map  forward__kinematics_8hpp__dep__incl.md5  forward__kinematics_8hpp__incl.map  (+42 more)
docs/latex/: annotated.tex  app_2CMakeLists_8txt.tex  app_2main_8cpp.tex  app_2main_8cpp__incl.md5  classForwardKinematics.tex  classForwardKinematics__inherit__graph.md5  classInverseKinematics.tex  classInverseKinematics__inherit__graph.md5  classRobotParameters.tex  classRobotParameters__inherit__graph.md5  code__test_8cpp.tex  code__test_8cpp__incl.md5  dir_13e138d54eb8818da29c3992edef070a.tex  (+36 more)
include/: forward_kinematics.hpp  inverse_kinematics.hpp  robot_parameters.hpp
results/: cppcheck.txt  cpplint_code_test.txt  cpplint_forward_kinematics.txt  cpplint_forward_kinematics_hpp.txt  cpplint_inverse_kinematics.txt  cpplint_inverse_kinematics_hpp.txt  cpplint_main.txt  cpplint_robot_parameters.txt  cpplint_robot_parameters_hpp.txt  valgrind.txt
test/: CMakeLists.txt  code_test.cpp  main.cpp
(+43 files in other folders)
